kubernetes/ingress/microcks-keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microcks-keycloak-ingress
  namespace: microcks
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt-ovh
  ingressClassName: traefik
  rules:
    - host: keycloak-microcks.ebruno.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microcks-keycloak
                port:
                  number: 8080
  tls:
    - hosts:
        - keycloak-microcks.ebruno.fr
